--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,11 @@ a:hover {
 	opacity: 0.8;
 }
 
+ul {
+  list-style: none;
+	padding: 0;
+}
+
 .page {
 min-width: 1100px;
 /* мы ещё не умеем делать мобильную версию сайта, */
